Rounded out core code

--- a/Cnx.Core.Lib/Cnx.Core.Lib.csproj
+++ b/Cnx.Core.Lib/Cnx.Core.Lib.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DateTime Extension Methods.cs" />
+    <Compile Include="LogSupport.cs" />
+    <Compile Include="ObjectDumper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
