--- a/Cnx.StateManagement.Lib/Cnx.StateManagement.Lib.csproj
+++ b/Cnx.StateManagement.Lib/Cnx.StateManagement.Lib.csproj
@@ -56,11 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actions\ActionBase.cs" />
-    <Compile Include="Actions\DecrementAction.cs" />
-    <Compile Include="Actions\IncrementAction.cs" />
     <Compile Include="CnxState.cs" />
-    <Compile Include="Interfaces\ICnxAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IReducer.cs" />
     <Compile Include="ReducerBase.cs" />
@@ -70,6 +66,7 @@
     <Compile Include="StateManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -77,13 +74,17 @@
       <Project>{53a9e99d-2a57-4b27-abad-b5701092b45f}</Project>
       <Name>Cnx.Core.Lib</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Cnx.DAL.Models\Cnx.DAL.Models.csproj">
-      <Project>{c4606eee-4120-4612-8d8c-965e325440c0}</Project>
-      <Name>Cnx.DAL.Models</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Cnx.DAL.Repostories\Cnx.DAL.Repositories.csproj">
       <Project>{2c5bcfc2-9b6b-4f43-b90a-c58204377c0a}</Project>
       <Name>Cnx.DAL.Repositories</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cnx.Shared.Actions\Cnx.Shared.Actions.csproj">
+      <Project>{661afa9a-aa67-4557-8d7c-019d1eac9f43}</Project>
+      <Name>Cnx.Shared.Actions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cnx.Shared.DAL.Models\Cnx.Shared.DAL.Models.csproj">
+      <Project>{5b1aabc4-dc06-425d-b56b-e452ced6bfb8}</Project>
+      <Name>Cnx.Shared.DAL.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
